# nostalgia-game-engine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  FixCompileCommands.cmake  Linux_Debug_Makefile  Makefile  NostalgiaTheatre.sublime-syntax  Notes.nt  Notes.nts  OLD_CMakeLists.txt  Old_CMakeLists.txt  README.md  Sources.cmake  Thirdparty.cmake  Windows_Debug_Makefile  demo-1.dem  old.Makefile
.github/workflows/: cmake-multi-platform.yml
Editor/: Makefile
Editor/app/: nostalgia_goggles.cpp  nostalgia_goggles.hpp
Editor/assets/: editor_uids.hpp  icon_uids.hpp
Editor/gui/: imgui_debugger.cpp  imgui_debugger.hpp  imgui_editor.cpp  imgui_editor.hpp  imgui_editor_inspector.cpp  imgui_editor_main_window.cpp  imgui_editor_theatre_instancing.cpp  imgui_editor_thing_storage.hpp  imgui_implementor.cpp  imgui_implementor.hpp  imgui_theatre_loading_tab.cpp  imgui_thing_adder.cpp
Editor/system/: dedicated_main.cpp  program_arguments.hpp
Editor/theatre/: editor_theatre.cpp  editor_theatre.hpp
Editor/things/: editor_player_3d.cpp  editor_player_3d.hpp  player.cpp  player.hpp  test_animated_sprite.cpp  test_animated_sprite.hpp  types.hpp
Engine/: Makefile  Nostalgia.hpp
Engine/Nostalgia/: Nostalgia.hpp
Nostalgia/: Nostalgia.hpp  test.cpp
Nostalgia/application/: application.cpp  application.hpp  monitor.hpp  window.cpp  window.hpp
Nostalgia/backends/: dummy_renderer_api.hpp
Nostalgia/common/: colors.hpp  string_compare.hpp
Nostalgia/components/: game_loop.hpp
Nostalgia/console/: console.cpp  console.hpp
Nostalgia/core/: ansi_sequence.cpp  ansi_sequence.hpp  bitmask.cpp  bitmask.hpp  concepts.hpp  constexpr_string_hash.hpp  debugging.hpp  enum_prettifier.hpp  enum_registry.hpp  error.hpp  global_constants.hpp  id.cpp  id.hpp  log.cpp  log.hpp  message_labels.cpp  mutex.hpp  safe_return.hpp  time.cpp  tree.hpp  typedefs.hpp  types.hpp  uid.cpp  uid.hpp  variant.cpp  variant.hpp  vector.hpp
Nostalgia/embedded/: EmbedAssets.cmake  fonts.hpp  images.hpp  models.hpp  shaders.hpp
Nostalgia/events/: action.hpp  bindings.hpp  event.cpp  event.hpp
Nostalgia/filesystem/: file_data.cpp  file_data.hpp  filesystem.cpp  filesystem.hpp  image_handler.cpp  image_handler.hpp
Nostalgia/fwd/: core.hpp  event_types.hpp  rendering.hpp  theatre.hpp  things.hpp  ui.hpp
Nostalgia/managers/: event_manager.cpp  event_manager.hpp  input_manager.cpp  input_manager.hpp  manager.cpp  manager.hpp  physics_manager.cpp  physics_manager.hpp  render_manager.cpp  render_manager.hpp  resource_manager.cpp  resource_manager.hpp  theatre_manager.cpp  theatre_manager.hpp  ui_manager.cpp  ui_manager.hpp
Nostalgia/math/: conversion.cpp  glm_concepts.hpp  glm_format.hpp  transform.hpp
Nostalgia/physics/: engine.cpp  engine.hpp
Nostalgia/rendering/: buffers.cpp  common.hpp  debugging.hpp  environment.hpp  frame_buffer.cpp  frame_buffer.hpp  graphics_context.cpp  graphics_context.hpp  mesh_buffers.cpp  mesh_buffers.hpp  render_buffer.cpp  render_buffer.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  texture_buffer.cpp  texture_buffer.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp
Nostalgia/theatre/: call_sheet.cpp  call_sheet.hpp  resource_database.cpp  resource_database.hpp  theatre.cpp  theatre.hpp  theatre_file.cpp  theatre_file.hpp  thing_data.cpp  thing_data.hpp  thing_factory.cpp  thing_factory.hpp  thing_type.cpp  thing_type.hpp  thing_variable.cpp  tree.cpp  tree.hpp  variable_registry.cpp  variable_registry.hpp
Nostalgia/things/: base_thing_type_ids.hpp  resource_database.cpp  resource_database.hpp  thing.cpp  thing.hpp  thing_data.cpp  thing_data.hpp  thing_factory.cpp  thing_factory.hpp  thing_type.cpp  thing_type.hpp  thing_variable.cpp  thing_variable.hpp
Nostalgia/ui/: implementor.cpp  implementor.hpp  solution.hpp
Testing/: app_and_window_test.cpp  shared_main.cpp  test_app.hpp
Tests/: new_data_test_parser.cpp  test_app.hpp  variant_tests.cpp  variant_tests.hpp
docs/: manager_system.md  thing.md  things_index.md  things_reference.md  thinker.md
docs/things/: thing.md
src/api_abstraction/: api_dedicated.cpp  api_dedicated.hpp  api_opengl.cpp  api_opengl.hpp
src/app/: application.hpp  input_manager.cpp  input_manager.hpp  manager.cpp  manager.hpp  nostalgia_goggles.cpp  nostalgia_goggles.hpp  render_manager.cpp  render_manager.hpp  the_toymaker.cpp  the_toymaker.hpp  toymaker.cpp  toymaker.hpp  world_manager.cpp  world_manager.hpp
src/backends/: backend.hpp  backend_manager.cpp  backend_manager.hpp  backends.hpp  fwd.hpp  graphics.cpp  graphics.hpp  input_conversion_tables.cpp  windowing.hpp
src/commands/: command_line.cpp  command_line.hpp
src/common/: binding_id.cpp  colors.hpp  compare_strings.hpp  debug.hpp  debugging.hpp  format_bool.hpp  fuck_windows.hpp  fwd.hpp  glm_to_string.hpp  hash.cpp  hash.hpp  ids.hpp  macros.hpp  opengl_includes.hpp  penum_t.hpp  printing.hpp  return_codes.hpp  safe_return.hpp  sanity_executable_locator.hpp  string_compare.hpp  string_concepts.hpp  string_to_num.hpp  string_transform.hpp  time.cpp  time.hpp  to_lower.hpp  truncate_string.hpp  unique_id.cpp  unique_ids.cpp
src/console/: command.cpp  command.hpp  command_line.cpp  command_line.hpp  variable.hpp
src/dedicated/: main.cpp  sys_dedicated.cpp
src/demo/: demo.cpp  demo.hpp  demo_parser.cpp  demo_parser.hpp
src/embedded/: fonts.hpp  graphx_meshes.hpp  images.hpp  models.hpp  opengl_shaders.hpp  resource_data.cpp  resource_data.hpp
src/engine/: client.cpp
src/events/: demo_parser.cpp  demo_parser.hpp  event.hpp  event_system.cpp  event_system.hpp
src/filesystem/: binary_file_data.cpp  binary_file_data.hpp  file_data.cpp  file_data.hpp  filesystem.cpp  filesystem.hpp  fwd.hpp
src/imgui/: imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/input/: actions.cpp  binding.cpp  binding.hpp  demo_controller.cpp  demo_controller.hpp  enums.hpp  event.cpp  (+11 more)
theatres/: 0.GraphXHelloWorld.gt  Debug.nt  HelloWorld.nt  NostalgiaHelloWorld.nt  Screenshots.nt  StressTesting.nt  ThirdpartyTest_JoltPhysics.nt  ThirdpartyTest_None.nt  kys.nt
(+1043 files in other folders)
